--- a/static/css/phantom-siita.css
+++ b/static/css/phantom-siita.css
@@ -118,7 +118,7 @@ a.twitter-tweet-data {
 }
 
 /* ##############################
-public
+link btn
 ############################## */
 
 .link-btn-div {
@@ -146,6 +146,9 @@ public
     color: #fff;
 }
 
+/* ##############################
+official link
+############################## */
 
 #official-link {
     display: flex;
@@ -190,6 +193,10 @@ public
     color: #83a3de !important;
     transition: 0.2s;
 }
+
+/* ##############################
+list 
+############################## */
 
 .link-list,
 .notice-list {
@@ -287,7 +294,6 @@ public
     }
 }
 
-
 /* ##############################
 setlist
 ############################## */
@@ -336,4 +342,91 @@ notice
     width: 30px;
     vertical-align: bottom;
     margin-right: 10px;
+}
+
+/* ##############################
+filter
+############################## */
+
+.filter-group {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    margin-bottom: 16px;
+}
+
+.filter-toggle {
+    padding: 4px 10px;
+    border: 1px solid #757575;
+    border-radius: 5px;
+    background-color: #391515;
+    /* OFF */
+    color: #999999;
+    cursor: pointer;
+    user-select: none;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.filter-toggle.active {
+    background-color: rgb(137, 12, 12);
+    /* ON */
+    border-color: #e8e8e8;
+    color: #ffffff;
+}
+
+#apply-filters,
+#reset-filters {
+    padding: 8px 16px;
+    border: none;
+    border-radius: 5px;
+    background-color: #7f7f7f;
+    color: #ffffff;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+#reset-filters {
+    padding: 4px 10px;
+    margin-left: 10px;
+}
+
+#apply-filters:hover,
+#reset-filters:hover {
+    background-color: #9a9a9a;
+    transform: scale(1.05);
+}
+
+#apply-filters:active,
+#reset-filters:active {
+    transform: scale(0.95);
+}
+
+/* ##############################
+page
+############################## */
+
+.page-radio {
+    display: none;
+}
+
+.page-radio-label {
+    display: inline-block;
+    width: 15%;
+    background-color: rgba(50, 50, 50, 0.9);
+    border: 1px solid #aaaaaa;
+    text-align: center;
+}
+
+.pages-block {
+    display: flex;
+    justify-content: center;
+}
+
+.pages-range {
+    text-align: center;
+    margin: 0 0 5px 0;
+}
+
+.page-radio-label.selected-page {
+    background-color: rgba(150, 150, 150, 0.9);
 }
