--- a/static/css/mothlamp.css
+++ b/static/css/mothlamp.css
@@ -56,7 +56,7 @@ footer
 .footer-link {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 0.4rem 1rem;
 
     margin: 0 20px 10px 20px;
     padding: 10px;
