--- a/static/css/mothlamp.css
+++ b/static/css/mothlamp.css
@@ -53,23 +53,6 @@ img:not([class]) {
     pointer-events: none;
 }
 
-.update {
-    position: absolute;
-    font-size: 0.7rem;
-    text-align: right;
-    margin: 10px;
-    bottom: 0;
-    right: 0;
-}
-
-/* ##############################
-indent
-############################## */
-
-.indent-lv1 {
-    padding-left: 1.5em;
-}
-
 
 /* ##############################
 footer
@@ -529,15 +512,9 @@ phanart
     pointer-events: none;
 }
 
-.block-description {
-    color: #bbbbbb;
-    margin: 0;
-    font-size: 0.75rem;
-    line-height: 1.2;
-}
-
 .phanart-modal {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     position: fixed;
@@ -566,7 +543,7 @@ phanart
 .phanart-modal-content {
     display: block;
     max-width: 90vw;
-    max-height: 90vh;
+    max-height: 80vh;
 }
 
 .phanart-container {
@@ -593,6 +570,16 @@ phanart
     height: 100%;
     object-fit: cover;
     transform: translate(-50%, -50%);
+}
+
+.phanart-modal-a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.phanart-modal-a:hover {
+    color: #ffffff;
+    text-decoration: underline;
 }
 
 /* ##############################
