--- a/static/css/mothlamp.css
+++ b/static/css/mothlamp.css
@@ -445,10 +445,59 @@ page
 phanart
 ############################## */
 
+
+.phanart-link-block {
+    position: relative;
+    overflow: hidden;
+    height: 30vh;
+    animation: none;
+
+    @media screen and (min-width: 767px) {
+        height: 40vh;
+    }
+}
+
+.phanart-slider-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    display: flex;
+    overflow: hidden;
+    align-items: center;
+    filter: brightness(0.5);
+}
+
+.phanart-slider {
+    display: flex;
+    animation: loop-slide 20s infinite linear 1s both;
+}
+
+.phanart-link-img {
+    max-width: none;
+    height: 30vh;
+
+    @media screen and (min-width: 767px) {
+        height: 40vh;
+    }
+}
+
+@keyframes loop-slide {
+    from {
+        transform: translateX(0);
+    }
+
+    to {
+        transform: translateX(-100%);
+    }
+}
+
+
 .phanart-artist-block {
     position: relative;
     aspect-ratio: 1.618 / 1;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     overflow: hidden;
@@ -482,7 +531,7 @@ phanart
     object-fit: cover;
     transform: translate(-50%, -50%);
     z-index: -1;
-    filter: sepia(50%) brightness(0.8) saturate(50%) contrast(90%);
+    filter: sepia(50%) brightness(0.5) saturate(50%) contrast(90%);
 }
 
 .phanart-artist-block:hover .phanart-artist-cover {
