--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,6 +12,7 @@ tatsu css update 25.02.11
     - menu
     - loading
     - modal
+    - popupimg-modal
     - bg para
     - pwa
     - captures
@@ -631,6 +632,55 @@ modal
     z-index: 50;
 }
 
+
+/*--------------------
+popupimg-modal
+--------------------*/
+
+#popupimg-modal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.9);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.5s, visibility 0.5s;
+}
+
+#popupimg-modal-close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+#popupimg-modal-img,
+#popupimg-modal-protected-img {
+    display: block;
+    max-width: 90vw;
+    max-height: 80vh;
+}
+
+#popupimg-modal-orig-link {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+#popupimg-modal-orig-link:hover {
+    color: #ffffff;
+    text-decoration: underline;
+}
 
 
 /*--------------------
