--- a/static/css/mothlamp.css
+++ b/static/css/mothlamp.css
@@ -1,4 +1,5 @@
 :root {
+    --color-main: #600E0E;
     --color-mona: #E56FAA;
     --color-miu: #EFF2FB;
     --color-rinka: #652C78;
@@ -320,23 +321,23 @@ list
 }
 
 /* ##############################
-setlist
+butterfly list
 ############################## */
 
-.setlist-ul {
+.butterfly-list {
     list-style-type: none;
-    padding-left: 25px;
+    padding-left: 15px;
 }
 
-.setlist-ul li {
+.butterfly-list li {
     position: relative;
 }
 
-.setlist-ul li p {
+.butterfly-list li p {
     margin-left: 30px;
 }
 
-.setlist-ul li svg {
+.butterfly-list li svg {
     fill: #CFDFE6;
     height: 20px;
     width: 20px;
@@ -345,12 +346,6 @@ setlist
     left: 0;
     top: 50%;
     transform: translateY(-50%);
-}
-
-.setlist-anchor {
-    display: block;
-    padding-top: calc(25px + var(--safeareainsettop));
-    margin-top: calc(-25px - var(--safeareainsettop));
 }
 
 /* ##############################
@@ -571,40 +566,6 @@ phanart
     pointer-events: none;
 }
 
-.phanart-modal {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.9);
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.5s, visibility 0.5s;
-}
-
-#phanart-modal-close {
-    position: absolute;
-    top: 15px;
-    right: 35px;
-    color: #f1f1f1;
-    font-size: 40px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.phanart-modal-content {
-    display: block;
-    max-width: 90vw;
-    max-height: 80vh;
-}
-
 .phanart-container {
     display: flex;
     flex-wrap: wrap;
@@ -631,15 +592,6 @@ phanart
     transform: translate(-50%, -50%);
 }
 
-.phanart-modal-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-.phanart-modal-a:hover {
-    color: #ffffff;
-    text-decoration: underline;
-}
 
 /* ##############################
 donation
