--- a/static/css/base.css
+++ b/static/css/base.css
@@ -299,8 +299,8 @@ contents
 }
 
 .bottom_logo {
-    height: 5vh;
-    margin: 0 auto;
+    height: 10vh;
+    margin: 10px auto 10px auto;
     pointer-events: none;
 }
 
@@ -590,7 +590,7 @@ loading
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    border: 10px solid rgba(255, 255, 255, 0.5);
+    border: 5px solid rgba(255, 255, 255, 0.5);
     border-top-color: rgba(255, 255, 255, 1);
 
     animation: rotate 1s linear infinite;
