--- a/static/css/glitch-animation.css
+++ b/static/css/glitch-animation.css
@@ -1,3 +1,7 @@
+/*==================================================
+version 25.08.29
+==================================================*/
+
 /* バグ風アニメーション1 */
 @keyframes glitch-text-1 {
     0% {
