--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,6 +13,7 @@ tatsu css update 25.08.29
     - loading
     - modal
     - popupimg-modal
+    - media-flex
     - bg para
     - pwa
     - captures
@@ -687,6 +688,37 @@ popupimg-modal
 #popupimg-modal-orig-link:hover {
     color: #ffffff;
     text-decoration: underline;
+}
+
+
+/*--------------------
+media-flex
+--------------------*/
+
+.media-flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.media-flex-container>div {
+    position: relative;
+    width: calc((100% - 10px) / 2);
+    aspect-ratio: 1/1;
+
+    @media screen and (min-width: 767px) {
+        width: calc((100% - 20px) / 3);
+    }
+}
+
+.media-flex-container>div>img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: translate(-50%, -50%);
 }
 
 
