--- a/static/css/mothlamp.css
+++ b/static/css/mothlamp.css
@@ -121,6 +121,18 @@ local
 youtube
 ############################## */
 
+.yt-video-container iframe {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    max-height: 80vh;
+    aspect-ratio: 16 / 9;
+
+    @media screen and (min-width: 767px) {
+        max-width: 80%;
+    }
+}
+
 .yt-shorts-container iframe {
     display: block;
     margin: 0 auto;
