--- a/static/css/mothlamp.css
+++ b/static/css/mothlamp.css
@@ -120,17 +120,25 @@ local
 /* ##############################
 youtube
 ############################## */
+.yt-flex-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px 10px;
+}
+
+.yt-flex-container {
+    position: relative;
+    width: calc((100% - 20px) / 3);
+    aspect-ratio: 9 / 16;
+}
 
 .yt-video-container iframe {
     display: block;
     margin: 0 auto;
     width: 100%;
+    height: 100%;
     max-height: 80vh;
     aspect-ratio: 16 / 9;
-
-    @media screen and (min-width: 767px) {
-        max-width: 80%;
-    }
 }
 
 .yt-shorts-container iframe {
@@ -138,9 +146,20 @@ youtube
     margin: 0 auto;
     width: 100%;
     max-width: 550px;
-    height: 100vh;
+    height: 100%;
     max-height: 80vh;
     aspect-ratio: 9 / 16;
+}
+
+.yt-music-container iframe {
+    display: block;
+    margin: 0 auto;
+    width: 70%;
+    aspect-ratio: 1 / 1;
+
+    @media screen and (min-width: 767px) {
+        width: 50%;
+    }
 }
 
 /* ##############################
